--- a/set.env
+++ b/set.env
@@ -1,12 +1,12 @@
-OWNER_NAME="Ibrahim Adams"
+OWNER_NAME="Njabulo Jb"
 PREFIX="."
 PUBLIC_MODE='yes'
 AUTO_READ_STATUS="yes"
 AUTO_DOWNLOAD_STATUS="no"
-BOT_NAME= "BMW-MD"
-IMAGE_MENU= "https://files.catbox.moe/zotx9t.jpg"
-NUMERO_OWNER= "254710772666"
-OWNER_NAME= "᚛Ibrahim adams᚜"
+BOT_NAME= "fana-xmd"
+IMAGE_MENU= "https://files.catbox.moe/mh36c7.jpg"
+NUMERO_OWNER= "26777821911"
+OWNER_NAME= "᚛Njabulo Jb᚜"
 DATABASE_URL= "postgresql://postgres:bKlIqoOUWFIHOAhKxRWQtGfKfhGKgmRX@viaduct.proxy.rlwy.net:47738/railway"
 WARN_COUNT= ""
 OPENAI_API_KEY= ""
