--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "whatsapp-bot",
     "raheem-md-boy"
   ],
-  "author": "NjabuloJ",
+  "author": "NjabuloAI",
 "license": "ISC",
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
