--- a/set.env
+++ b/set.env
@@ -3,7 +3,7 @@ PREFIX="."
 PUBLIC_MODE='yes'
 AUTO_READ_STATUS="yes"
 AUTO_DOWNLOAD_STATUS="no"
-BOT_NAME= "fana-xmd"
+BOT_NAME= "njabulo_jb"
 IMAGE_MENU= "https://files.catbox.moe/mh36c7.jpg"
 NUMERO_OWNER= "26777821911"
 OWNER_NAME= "᚛Njabulo Jb᚜"
